# dwh-orchestration

./: .coveragerc  .editorconfig  .env.dev.example  .env.prod.example  .env.stage.example  .gitignore  .pre-commit-config.yaml  README.md  README.old.md  data-ingestion-framework.code-workspace  pyproject.toml  quickstart.py  requirements-dev.txt  requirements.txt
config/: README.md
config/destinations/: databricks.yaml  duckdb_local.yaml
config/environments/dev/: secrets_mapping.yaml
config/environments/dev/destinations/: databricks.yaml  duckdb_local.yaml
config/environments/dev/jobs/: all_pipelines_job.yaml  hourly_analytics.yaml  mock_pipeline_job.yaml
config/environments/dev/pipelines/: github_to_duckdb.yaml  mock_to_duckdb.yaml  youtube_to_databricks.yaml
config/environments/dev/sources/: github_api.yaml  mock_api.yaml  youtube_api.yaml
config/environments/dev/triggers/: all_pipelines_daily.yaml  daily_ingestion.yaml  github_hourly.yaml  manual_backfill.yaml  mock_manual.yaml  realtime_monitoring.yaml  webhook_refresh.yaml
config/environments/prod/: secrets_mapping.yaml
config/environments/prod/destinations/: databricks.yaml
config/environments/prod/pipelines/: youtube_to_databricks.yaml
config/environments/prod/sources/: youtube_api.yaml
config/environments/stage/: secrets_mapping.yaml
config/environments/stage/destinations/: databricks.yaml
config/environments/stage/pipelines/: youtube_to_databricks.yaml
config/environments/stage/sources/: youtube_api.yaml
config/jobs/: all_pipelines_job.yaml  hourly_analytics.yaml  mock_pipeline_job.yaml
config/pipelines/: github_to_duckdb.yaml  mock_to_duckdb.yaml  youtube_to_databricks.yaml
config/sources/: github_api.yaml  mock_api.yaml  youtube_api.yaml
config/triggers/: README.md  all_pipelines_daily.yaml  daily_ingestion.yaml  github_hourly.yaml  manual_backfill.yaml  mock_manual.yaml  realtime_monitoring.yaml  webhook_refresh.yaml
deployment/: README.md
deployment/docker/: Dockerfile  docker-compose.yml
deployment/systemd/: prefect-server.service  prefect-worker@.service
docs/: vscode-setup.md
examples/: README.md  dynamic_discovery.py  run_github_pipeline.py  run_mock_pipeline.py  run_youtube_pipeline.py
orchestration/: README.md  __init__.py  deploy.py  flows.py  main.py
scripts/: list_configs.py  orchestration.sh  setup.sh  start_prefect.sh  switch_env.sh  validate_configs.py  validate_secrets.py
src/ingestion/: __init__.py  cli.py
src/ingestion/config/: __init__.py  environment.py  loader.py  models.py  secrets_resolver.py  validator.py
src/ingestion/pipelines/: __init__.py  executor.py  factory.py
src/ingestion/sources/: __init__.py  base.py  factory.py  rest_api.py
src/ingestion/utils/: __init__.py  logging.py
tests/: conftest.py
tests/unit/config/: test_environment.py  test_loader.py  test_models.py  test_secrets_resolver.py  test_validator.py
tests/unit/pipelines/: test_factory.py  test_init.py
tests/unit/sources/: __init__.py  test_base.py  test_factory.py  test_rest_api.py
tests/unit/utils/: test_logging.py
